--- a/assets/css/web/imgres.css
+++ b/assets/css/web/imgres.css
@@ -16,6 +16,7 @@ html {
   overflow: hidden;
   border: 2px solid #676767;
   margin: 3rem auto;
+  padding-bottom: 20px;
   font-size: 1rem;
 }
 @media screen and (min-width: 40rem) {
@@ -24,7 +25,7 @@ html {
     width: 100%;
     float: left;
     height: 60vw;
-    max-height: 30rem;
+    max-height: 340px;
     margin: 0 auto;
     border: 0.2rem solid #fff;
   }
